Refactor codebase to use `Objects.requireNonNull` for null safety and update dependencies, including logback to version 1.5.18.